aggiunta Introduzione ed Analisi dei rischi

--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -1,7 +1,7 @@
 \newcommand{\Titolo}{Piano di Progetto}
 
 \newcommand{\Approvatore}{TODO}
-\newcommand{\Redattori}{TODO \newline TODO}
+\newcommand{\Redattori}{Elvis Murtezan \newline Giovanni Grigoletto}
 \newcommand{\Verificatori}{TODO}
 \newcommand{\Responsabile}{}
 
@@ -10,12 +10,10 @@
 \newcommand{\Versionedoc}{X.X.X}
 
 \newcommand{\Distribuzione}{
-Prof.
-Tullio Vardanega \newline
-Prof.
-Riccardo Cardin \newline
-TODO \newline Sweleven}
+Prof. Tullio Vardanega \newline
+Prof. Riccardo Cardin \newline
+\proponente{} \newline Gruppo \Gruppo{}}
 
 \newcommand{\Uso}{Esterno}
 
-\newcommand{\DescrizioneDoc}{}
+\newcommand{\DescrizioneDoc}{Attività di pianificazione per la realizzazione del progetto \NomeProgetto{} da parte del gruppo \Gruppo{}}
