--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/main.tex
@@ -1,3 +1,48 @@
-\subsection{Scopo del documento}
+\subsection {Scopo del documento}
+    Il presente documento ha lo scopo di illustrare le scelte e le strategie che il gruppo \Gruppo{} intende adottare per la realizzazione del progetto \NomeProgetto{}, soffermandosi in particolare sui seguenti aspetti:
+    \begin{itemize}
+        \item rilevare ogni possibile rischio e definire la strategia da adottare per mitigarlo;
+        \item scegliere un adeguato modello di sviluppo ed esporre la relativa pianificazione generale del lavoro;
+        \item stimare il costo orario ed economico necessario per la realizzazione dell'intero progetto;
+        \item definire l'organizzazione dei membri all'interno del team per la distribuzione del lavoro e dei rispettivi ruoli;
+    \end{itemize}
+
 \subsection{Struttura del documento}
+    Nello specifico, gli aspetti sopracitati verranno suddivisi e trattati come segue:
+    \begin{itemize}
+        \item Introduzione, comprensiva delle scadenze e di riferimenti utili;
+        \item Analisi dei rischi;
+        \item Modello di sviluppo;
+        \item Pianificazione;
+        \item Preventivo;
+        \item Consuntivo periodo;
+        \item Organigramma;
+    \end{itemize}
+
 \subsection{Scopo generale del prodotto}
+    L'obiettivo principale del progetto \NomeProgetto{}, proposto dall'azienda \proponente{}, riguarda il tracciamento dell'utilizzo delle postazioni di lavoro in un laboratorio informatico, applicabile ad un contesto sia lavorativo che accademico.
+    Il motivo è fortemente legato alla diffusione della pandemia di coronavirus che tutto il mondo sta vivendo ed affrontando in questo momento. Per garantire la sicurezza nell'utilizzo di ogni postazione, è richiesta quindi la creazione di un sistema software formato da due componenti principali:
+    \begin{itemize}
+        \item \textbf{Applicazione mobile:} attraverso un sistema di autenticazione deve offrire la possibilità di visualizzare lo stato di una postazione (libera, occupata, igienizzata, non igienizzata), prenotarne una disponibile, registrare in tempo reale l'utilizzo della stessa, così come segnalarne l'eventuale igienizzazione svolta;
+        \item \textbf{Server:} dedicato alla gestione generale del sistema, attraverso un'apposita interfaccia, deve garantire la possibilità di creare, eliminare, abilitare, disabilitare postazioni di lavoro come anche di intere aule; memorizzare in maniera certificata ed immutabile lo storico di ogni postazione; monitorare in tempo reale lo stato di ogni postazione; gestire gli utenti all'interno del sistema.
+    \end{itemize}
+
+\subsection{Glossario}
+    Per definire i termini tecnici ed evitare ogni possibile ambiguità nella comprensione del qui presente \PdP{}, è stato redatto un documento denominato \G{}. Ogni termine presente in esso, con la relativa definizione, sarà identificato in questo documento con formattazione in corsivo ed un apice \glo{} alla fine della parola.
+
+\subsection{Scadenze}
+    Il gruppo \Gruppo{} intende realizzare il progetto \NomeProgetto{} rispettando le seguenti principali \glo{milestone}:
+    \begin{itemize}
+        \item \textbf{Revisione dei Requisiti}: 2020-01-11;
+        \item \textbf{Revisione di Progettazione}: 2020-03-08;
+        \item \textbf{Revisione di Qualifica}: 2020-04-09;
+        \item \textbf{Revisione di Accettazione}: 2020-05-10.
+    \end{itemize}
+
+\subsection{Riferimenti normativi ed informativi}
+    \begin{itemize}
+        \item \NdP{};
+        \item \textbf{Capitolato d'appalto C1}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/C1.pdf};
+        \item \textbf{Docker Ecosystem and Tools}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/ST3.pdf};
+        \item \textbf{Organigrama}: \url{https://www.math.unipd.it/~tullio/IS-1/2020/Progetto/RO.html}.
+    \end{itemize}
