--- a/Shared/Sweleven.sty
+++ b/Shared/Sweleven.sty
@@ -125,7 +125,7 @@
 % variabili - altro
 
 \newcommand{\Mail}{TODO}
-\newcommand{\proponente}{TODO}
+\newcommand{\proponente}{Imola Informatica}
 \newcommand{\committenti}{Tullio Vardanega e Riccardo Cardin}
 
 \newcommand{\RR}{Revisione dei Requisiti}
@@ -133,7 +133,7 @@
 \newcommand{\RQ}{Revisione di Qualifica}
 \newcommand{\RA}{Revisione di Accettazione}
 
-\newcommand{\NomeProgetto}{TODO}
+\newcommand{\NomeProgetto}{BlockCovid}
 
 \newcommand{\glo}[1]{\textit{#1}\ped{G}}
 
