piccole modifiche + aggiornato logo

--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/main.tex
@@ -11,8 +11,8 @@ Al fine di rilevare e mitigare ogni possibile imprevisto o difficoltà viene qui
         \end{itemize}
         Dove il carattere "x" indica per ogni tipologia una lettera minuscola assegnata, in ordine alfabetico, con lo scopo di dare un'identificazione univoca al rischio corrispondente.
     
-    \subsubsection{Occorrenza}
-        Indica la probabilità che il rischio si presenti e può essere alta, media o bassa.
+    \subsubsection{Probabilità}
+        Indica la probabilità che il rischio si presenti e può essere alta, media o bassa. Utile perchè permette di porre diversa attenzione alle problematiche identificate con una certa probabilità, ponendo particolare riguardo a quelle con possibile occorrenza alta.
 
     \subsubsection{Gravità}
         Specifica quanto il rispettivo rischio può impattare sullo svolgimento del lavoro:
@@ -35,8 +35,8 @@ Al fine di rilevare e mitigare ogni possibile imprevisto o difficoltà viene qui
         \rowcolor{\primaryColor}
         \textcolor{\secondaryColor}{\textbf{Cod.}} & 
         \textcolor{\secondaryColor}{\textbf{Descrizione}} & 
+        \textcolor{\secondaryColor}{\textbf{Prob.}} & 
         \textcolor{\secondaryColor}{\textbf{Grav.}} & 
-        \textcolor{\secondaryColor}{\textbf{Occ.}} & 
         \textcolor{\secondaryColor}{\textbf{Rilevamento}} &
         \textcolor{\secondaryColor}{\textbf{Risoluzione}}\\
 
@@ -46,77 +46,77 @@ Al fine di rilevare e mitigare ogni possibile imprevisto o difficoltà viene qui
         alta &
         La persona interessatà si accorgerà di non conoscere ciò che viene richiesto nel relativo lavoro. &
         Documentarsi autonomamente, eventuale supporto dei compagni più esperti, suddivisione dei compiti tale da risultare meno onerosa.\\
-
+        \hline
         RTb &
         L'ambiente di lavoro è male ottimizzato per lo sviluppo e lo svolgimento dei compiti. &
         media &
-        media &
+        bassa &
         Comunicare tra i membri del gruppo per informarsi a vicenda sulle metodologie solitamente usate per determinate procedure. &
         I membri già agili in determinate azioni daranno consigli utili ai meno esperti. \\
-
+        \hline
         RTc &
         Impossibilità di utilizzare alcuni strumenti necessari al progetto, dovuta a malfunzionamenti o mancato possesso. &
         bassa &
         alta &
         Una volta che si ha chiaro cosa sia necessario, informare tempestivamente il gruppo dell'eventuale mancanza. &
         Munirsi al più presto del necessario. Qualora non fosse possibile altri membri del gruppo prenderanno in carico le relative mansioni, affidando all'interessato quelle che non hanno necessità dell'elemento in questione. \\
-
+        \hline
         RTd &
         Mancata comprensione di alcuni requisiti richiesti dal progetto. &
         media &
         alta &
         Comunicare quanto prima al gruppo qualunque cosa non sia stata ben capita dalla persona in questione. &
         Gli altri membri che hanno chiara la questione si impegnano a spiegare ed aiutare nella comprensione. Se necessario si provvederà a contattare il proponente. \\
-
+        \hline
         RTe &
         Tempo a disposizione scarso per lo svolgimento di alcuni compiti onerosi. &
         alta &
         alta &
         In base all'esperienza cercare di stimare il tempo necessario per un determinato compito. &
         Si cerca di ottimizzare distribuendo le diverse parti del lavoro tra i membri più esperti o adatti a svolgerle. \\
-
+        \hline
         RPa &
         Impegni personali regolari. &
         alta &
         bassa &
         E' stato creato un documento condiviso contenente una tabella in cui ogni membro del gruppo segna i giorni ed orari in cui garantisce la propria disponibilità. &
         Ci si impegna ad organizzare il lavoro e specialmente gli incontri concordantemente agli impegni di tutti. \\
-
+        \hline
         RPb &
         Indisposizione improvvisa di un membro del gruppo (dovuta ad impegni o malattia) che impossibilita lo svolgimento di alcuni compiti. &
         bassa &
         media &
         Comunicare tempestivamente al gruppo di essere impossibilitati. &
         A seconda dell'importanza del compito assegnato si valuterà se concedere più tempo oppure suddividerlo tra i restanti membri. \\
-
+        \hline
         ROa &
         Incomprensioni o difficili rapporti tra membri del gruppo. &
         media &
         alta &
         Qualora ci fossero dei problemi relazionali, comunicarli per quanto possibile ai membri del gruppo. &
         Comunicare trasparentemente e con rispetto il proprio punto di vista; cercare di venirsi incontro trovando delle soluzioni comuni. \\
-
+        \hline
         ROb &
         Mancata osservanza di alcune regole pre-concordate dal gruppo. &
         media &
         alta &
         Sono stati adottati e predisposti diversi strumenti che permettono un continuo ed aggiornato monitoraggio dell'attività di ogni membro nelle diverse fasi del lavoro. &
         Verrà fatto presente quanto prima all'interessato, invitando ad osservare le regole più fedelmente. \\
-
+        \hline
         ROc &
         Tempi assegnati sovrastimati o sottostimati, per la realizzazione di alcuni compiti. &
         alta &
         media &
         Nel momento in cui ci si accorge del problema, comunicarlo al gruppo per verificare se altri membri sono della stessa opinione. &
         Prendere atto della cosa per programmare in maniera più efficace i futuri compiti da svolgere. \\
-
+        \hline
         ROd &
         Mancato assolvimento dei compiti assegnati. &
         bassa &
         alta &
         All'avvicinarsi dello scadere dei tempi stabiliti, il responsabile si informerà sullo stato dei lavori. &
         Nei casi più urgenti i restanti membri del gurppo valuteranno di suddividersi il lavoro da svolgere. \\
-       
+        \hline
     \end{longtable}
     }
         
