--- a/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Comandi.tex
@@ -1,7 +1,7 @@
 \newcommand{\Titolo}{Piano di Qualifica}
 
 \newcommand{\Approvatore}{TODO}
-\newcommand{\Redattori}{TODO \newline TODO}
+\newcommand{\Redattori}{Andrea De Tomasi \newline TODO}
 \newcommand{\Verificatori}{TODO}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
