--- a/DocumentiInterni/StudioDiFattibilita/src/Comandi.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/Comandi.tex
@@ -1,8 +1,8 @@
 \newcommand{\Titolo}{Studio di Fattibilit\`{a}}
 
 \newcommand{\Approvatore}{TODO}
-\newcommand{\Redattori}{\newline TODO \newline TODO \newline TODO
-                        \newline TODO \newline TODO \newline TODO}
+\newcommand{\Redattori}{\newline Abdelwahad Kandoul \newline Andrea De Tomasi \newline Giovanni Grigoletto
+                        \newline Elvis Murtezan}
 \newcommand{\Verificatori}{TODO}
 
 
