--- a/DocumentiInterni/StudioDiFattibilita/src/C5/main.tex
+++ b/DocumentiInterni/StudioDiFattibilita/src/C5/main.tex
@@ -2,24 +2,30 @@
 Il capitolato in esame è intitolato "PORTACS: piattaforma di controllo mobilità autonoma", proposto dall'azienda Sanmarco Informatica mentre i committenti sono il Prof. Tullio Vardanega ed il Prof. Riccardo Cardin.
 \subsection{Descrizione del capitolato}
 L'azienda propone la creazione di un motore di elaborazione in tempo reale, che gestisca delle entità guidandole attraverso percorsi evitando collisioni ed eventualmente trovando i percorsi più convenienti.
-Il sistema centrale deve indicare ad ogni entità la prossima mossa per raggiungere il POI, tenendo conto della mappa fornita con tutte le sue caratteristiche (limiti di corsie, sensi unici..)
+Il sistema centrale deve indicare ad ogni entità la prossima mossa per raggiungere il \glo{POI}, tenendo conto della mappa fornita con tutte le sue caratteristiche (limiti di corsie, sensi unici..)
+\subsection{Tecnologie Coinvolte}
+\begin{itemize}
+    \item Git;
+    \item container software;
+    \item diagrammi UML.
+\end{itemize}
 \subsection{Vincoli}
 \begin{itemize}
-    \item Le unità devono evitare le collisioni
-    \item Le unità devono continuamente inviare la posizione, direzione e stato al sistema centrale
-    \item Deve essere presente una UI dove vengono mostrate le mosse suggerite per ogni unità
+    \item le unità devono evitare le collisioni;
+    \item le unità devono continuamente inviare la posizione, direzione e stato al sistema centrale;
+    \item deve essere presente una UI dove vengono mostrate le mosse suggerite per ogni unità.
 \end{itemize}
 \subsection{Aspetti positivi}
 \begin{itemize}
-    \item Formazione di competenze in ambito di real-time monitoring and analysis
-    \item Il capitolato introduce alle problematiche del mondo della logistica, ambito molto informatizzato
-    \item Non è richiesta l'implementazione di algoritmi di ricerca operativa, che complicherebbero di molto l'algoritmo
+    \item formazione di competenze in ambito di real-time monitoring and analysis;
+    \item il capitolato introduce alle problematiche del mondo della logistica, ambito molto informatizzato;
+    \item non è richiesta l'implementazione di algoritmi di ricerca operativa, che complicherebbero di molto lo sviluppo dell'algoritmo.
 \end{itemize}
 \subsection{Aspetti critici}
 \begin{itemize}
-    \item L'intero sistema deve essere simulato, portando un grande lavoro aggiuntivo per simulare la raccolta dati di sensori
-    \item Non sono state indicate tecnologie consigliate
-    \item Non sono stati indicati vincoli che possano guidare all'implementazione
+    \item l'intero sistema deve essere simulato, portando un grande lavoro aggiuntivo per simulare la raccolta dati di sensori;
+    \item non sono state indicate tecnologie consigliate;
+    \item non sono stati indicati vincoli che possano guidare all'implementazione.
 \end{itemize}
 \subsection{Conclusioni}
 Il capitolato introduce molto bene la problematica da risolvere, ma non spiega le tecnologie da utilizzare e come eseguire l'implementazione.
