--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/main.tex
@@ -39,7 +39,7 @@ Al fine di rilevare e mitigare ogni possibile imprevisto o difficoltà viene qui
         \textcolor{\secondaryColor}{\textbf{Grav.}} & 
         \textcolor{\secondaryColor}{\textbf{Rilevamento}} &
         \textcolor{\secondaryColor}{\textbf{Risoluzione}}\\
-
+       
         RTa & 
         Gli strumenti o tecnologie richieste sono completamente o in parte sconosciute ad uno o più membri del gruppo. &
         alta & 
@@ -115,8 +115,9 @@ Al fine di rilevare e mitigare ogni possibile imprevisto o difficoltà viene qui
         bassa &
         alta &
         All'avvicinarsi dello scadere dei tempi stabiliti, il responsabile si informerà sullo stato dei lavori. &
-        Nei casi più urgenti i restanti membri del gurppo valuteranno di suddividersi il lavoro da svolgere. \\
+        Nei casi più urgenti i restanti membri del gruppo valuteranno di suddividersi il lavoro da svolgere. \\
         \hline
+    
     \end{longtable}
     }
         
