Orgaigramma+ preventivo stesura iniziale

--- a/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Comandi.tex
@@ -17,3 +17,10 @@ Prof. Riccardo Cardin \newline
 \newcommand{\Uso}{Esterno}
 
 \newcommand{\DescrizioneDoc}{Attività di pianificazione per la realizzazione del progetto \NomeProgetto{} da parte del gruppo \Gruppo{}}
+\newcommand{\AD}{Andrea De Tomasi}
+\newcommand{\AT}{Alessio Trevisan}
+\newcommand{\AW}{Abdelwahad Kandoul}
+\newcommand{\EC}{Edoardo Caregnato}
+\newcommand{\EM}{Elvis Murtezan}
+\newcommand{\FP}{Filippo Pinton}
+\newcommand{\GG}{Giovanni Grigoletto}
