--- a/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/main.tex
@@ -66,7 +66,7 @@
             \item verifica della documentazione per la Revisione di Qualifica.
         \end{itemize}
 
-    \subsubsection{Fase 7 - Revisione generale e collaudo}
+    \subsubsection{Fase 7 - Validazione e collaudo}
         \begin{itemize}
             \item attività di correzione;
             \item controllo complessivo di ogni parte del prodotto;
