Aggiornate sezioni e rimossa annotazione

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Codifica/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Codifica/main.tex
@@ -1,5 +1,5 @@
-\myparagraph{Scopo}
+\mysubparagraph{Scopo}
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Codifica/src/scopo.tex}
 
-\myparagraph{Stili di codifica}
+\mysubparagraph{Stili di codifica}
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Codifica/src/stiliDiCodifica.tex}
