--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/main.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/main.tex
@@ -1,8 +1,8 @@
-\myparagraph{Scopo}
+\mysubparagraph{Scopo}
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/scopo.tex}
 
-\myparagraph{Technology baseline}
+\mysubparagraph{Technology baseline}
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/TechnologyBaseline.tex}
 
-\myparagraph{Product baseline}
+\mysubparagraph{Product baseline}
 \input{src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/ProductBaseline.tex}
