--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/ProductBaseline.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/Progettazione/src/ProductBaseline.tex
@@ -1,1 +1,1 @@
-La Product baseline stabilisce i test necessari per la verifica ed integra la \emph{Technology baseline} descrivendo in maniera pi\'{u} dettagliata le attivit\'{a}.
+La Product baseline stabilisce i test necessari per la verifica ed integra la \emph{Technology baseline} descrivendo in maniera pi\`{u} dettagliata le attivit\`{a}.
