Ripristinati accenti acuti

--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneCasiDUso.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiPrimari/src/Sviluppo/src/Attivita/src/AnalisiDeiRequisiti/src/ClassificazioneCasiDUso.tex
@@ -22,7 +22,7 @@ I casi d'uso devono essere opportunamente corredati da:
     \item \textbf{Attori primari}: indicazione degli attori principali coinvolti;
     \item \textbf{Attori secondari}: indicazione degli attori secondari coinvolti;
     \item \textbf{Scopo}: scopo del caso d'uso;
-    \item \textbf{Precondizioni}: condizioni che devono essere verificate affinch\`{e} gli eventi descritti si verifichino;
+    \item \textbf{Precondizioni}: condizioni che devono essere verificate affinch\'{gli eventi descritti si verifichino;
     \item \textbf{Postcondizioni}: condizioni che devono essere verificarsi alla conclusione degli eventi descritti; 
     \item \textbf{Flusso principale}: flusso principale degli eventi, in forma di elenco numerato, con eventuale riferimento ad ulteriori casi d'uso.
     \item \textbf{Scenario alternativo}: indicazione di uno scenario alternativo \emph{(se presente)}
