--- a/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
+++ b/DocumentiInterni/NormeDiProgetto/src/ProcessiDiSupporto/src/NormeTipografiche.tex
@@ -69,7 +69,7 @@ dove:
 \begin{itemize}
 	\item N indicherà la sezione dove verrà inserita l’immagine;
 	\item n indicherà la sottosezione dove verrà inserita l’immagine;
-	\item # indicherà un numero intero naturale progressivo, che sarà l’indice dell’immagine;
+	\item \# indicherà un numero intero naturale progressivo, che sarà l’indice dell’immagine;
 	\item nomeimmagine indicherà il nome proprio dell’immagine;
 	\item estensione indicherà il formato dell’immagine (ex: jpg, png…).
 \end{itemize}
